@@ -22,7 +22,7 @@ CONFIGURE_PARAM = \
 	--bindir=/usr/games \
 	--mandir=\$${prefix}/share/man \
 	--infodir=\$${prefix}/share/info \
-	--enable-opengl
+	--enable-opengl --enable-alsa
 
 config.status: configure
 	dh_testdir
