@@ -19,7 +19,7 @@ void RemoveSound(void)
 // GET BYTES BUFFERED
 unsigned long SoundGetBytesBuffered(void)
 {
-	return 0;
+  return 0;
 }
 
 // FEED SOUND DATA
